# bot-builder

./: .env.example  pyproject.toml
bot_builder/: main.py
bot_builder/bot_responses/: bot_responses_controller.py  bot_responses_module.py  bot_responses_service.py  enum.py
bot_builder/bot_responses/dto/: bot_response_base_dto.py  bot_response_out_dto.py  create_bot_response_dto.py
bot_builder/bot_responses/schemas/: bot_response_button_schema.py  (+4 more)
bot_builder/config/: settings.py
bot_builder/grpc_server/: module.py  service.py
bot_builder/story_blocks/: enum.py  story_blocks_controller.py  story_blocks_service.py
bot_builder/user_inputs/: user_inputs_controller.py  user_inputs_module.py  user_inputs_service.py
bot_builder_story/: main.py
bot_builder_story/bot_responses/: bot_responses_controller.py  bot_responses_module.py  bot_responses_service.py  enum.py
bot_builder_story/config/: settings.py
bot_builder_story/decorators/: validate_token.py
bot_builder_story/filters/: enum.py  filters_controller.py  filters_module.py  filters_service.py
bot_builder_story/grpc_server/: module.py  service.py
bot_builder_story/story_blocks/: enum.py  story_blocks_controller.py  story_blocks_module.py  story_blocks_service.py
bot_builder_story/user_inputs/: user_inputs_controller.py  user_inputs_module.py  user_inputs_service.py
seller_chatbot/: app_module.py  main.py  response_interceptor.py
seller_chatbot/decorators/: validate_token.py
seller_chatbot/story_blocks/: story_blocks_controller.py  story_blocks_module.py  story_blocks_service.py
(+42 files in other folders)
