[tool.poetry]
name = "seller-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
grpcio-tools = "^1.60.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "seller_chatbot.main:start"
